<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
   >


    <ListView
        android:id="@+id/lista"
        android:layout_width="match_parent"
        android:layout_height="390dp"
         >

    </ListView>

    <TextView
        android:id="@+id/tvLongitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/longitud" />

    <TextView
        android:id="@+id/tvLatitud"
        android:layout_marginLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/latitud" />

    <ToggleButton
        android:id="@+id/btnActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"

        android:layout_marginBottom="10dp"
        android:textOff="@string/iniciar_actualizaciones"
        android:textOn="@string/parar_actualizaciones" />

    <Button
        android:id="@+id/btnCapturar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/btnCapturar" />


</LinearLayout>